refactor: remove refresh_token from AuthTokenDataSchema
