# mintlify/openapi/openapi.json
@@ -224,14 +224,10 @@
                       "properties": {
                         "access_token": {
                           "type": "string"
-                        },
-                        "refresh_token": {
-                          "type": "string"
                         }
                       },
                       "required": [
-                        "access_token",
-                        "refresh_token"
+                        "access_token"
                       ]
                     },
                     "metadata": {
@@ -580,14 +576,10 @@
                       "properties": {
                         "access_token": {
                           "type": "string"
-                        },
-                        "refresh_token": {
-                          "type": "string"
                         }
                       },
                       "required": [
-                        "access_token",
-                        "refresh_token"
+                        "access_token"
                       ]
                     },
                     "metadata": {
